test/fixtures/compile/function.decl.throws.error.noclass.error
Error 'BadError' must be a class (line 3)